--- a/content/projects/opensource.mdx
+++ b/content/projects/opensource.mdx
@@ -8,3 +8,7 @@ published: true
 ---
 
 List open source contributions
+
+## Bugfixes
+- [OpenTofu](https://github.com/opentofu/opentofu/pull/670) - fix(s3): allow aliases for kms key
+- [Terraform](https://github.com/hashicorp/terraform/pull/33993) - fix(s3): allow aliases for kms key
