--- a/content/projects/scalepoynt.mdx
+++ b/content/projects/scalepoynt.mdx
@@ -7,11 +7,14 @@ published: true
   
 ---
 
-
+<span style={{width:"139px",marginRight:"auto",marginLeft:"auto",display:"block"}}>
 [![](https://www.scalepoynt.io/wp-content/uploads/2020/10/logo.svg)](https://www.scalepoynt.io/)
-
+</span>
 Drop in an “AWS SWAT Team” to build, manage, and long-term scale with your organization.
 
-We all know your cloud infrastructure & DevOps is the needed for (a) setting up your dev team for success, (b) having a scalable platform for your customers, and (c) ensuring you can pass B2B enterprise security diligence questionnaires.
+We all know your cloud infrastructure & DevOps is the needed for 
+1. setting up your dev team for success, 
+2. having a scalable platform for your customers, and 
+3. ensuring you can pass B2B enterprise security diligence questionnaires.
 
 But, this is no small task, and doesn’t need to be done in-house.  Round out your team with experts, and never worry about AWS, scalability, or security again.
