feat: update freelancing
Signed-off-by: Andrew den Hertog <andrew@denhertog.ca>

--- a/content/projects/freelance.mdx
+++ b/content/projects/freelance.mdx
@@ -7,4 +7,20 @@ url: https://www.upwork.com/freelancers/~012958e63562b6a0a9
   
 ---
 
-Provide some examples here of freelance work
+Some of the freelance services I provide and have provided in the past are the
+following:
+- Server Migrations
+- AWS Cost Analysis and Advice
+- Kubernetes cluster support
+- Linux Server tuning
+- CI/CD pipeline creation and optimization
+
+I am comfortable working with the following products.
+- AWS, GCP, Azure, and DigitalOcean Cloud providers
+- Jenkins, Github Actions, CircleCI, Travis, and Gitlab CI/CD platforms
+- Ubuntu, Redhat, Amazon Linux, Centos, Fedora, and Alpine Linux
+- Kubernetes on baremetal, as well as from various cloud providers
+- Argo and Flux Gitops
+
+The above lists are not exhaustive. I'm an eager learner and willing to take on 
+any new challenge, especially if it helps me learn new skills
